Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137561

FAIL! : tst_QQuickColorDialogImpl::defaults() Received a warning that resulted in a failure

    XMLWordPrintable

Details

    • macOS
    • b6d533aa2 (dev), 735e90286 (6.10), 8b2e8b475 (6.9), 633d0d8d4 (tqtc/lts-6.8), 5942c9f01 (tqtc/lts-6.5)

    Description

      FAIL!  : tst_QQuickColorDialogImpl::defaults() Received a warning that resulted in a failure:
      Listener already tagged as destroyed when called! 
      	Listener: QObject(0x600000a3b560, name = colorPicker)::d_ptr 
      	Changes:  Destroyed|ImplicitWidth|ImplicitHeight 
      	Caller:   QQuickItem(0x600000a06300, parent=0x0, geometry=363,452 16x16, z=1) 
      	Changes:  Destroyed
         Loc: [/Users/qt/work/qt/qtdeclarative/src/quick/items/qquickitem_p.h(403)]
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/d1af3b9f71d2456f63476c233b78ffb081ea2659/MacOSMacOS_15arm64MacOSMacOS_15arm64Clangqtci-macos-15-arm-104-9993c9TestOnly/71333d9cd61c2dfa7c8d45856ac50e373484ade1/test_1749687322/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1749687211

      Tested changes (refs/builds/qtci/dev/1749683055):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/648762/3 a11y: support attributes for QQuickWidget
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/652226/2 Update dependencies on 'dev' in qt/qtdeclarative
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/648497/3 a11y: Report QQuickControl locale
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/650228/1 Bump version to 6.11.0

      Attachments

        For Gerrit Dashboard: QTBUG-137561
        # Subject Branch Project Status CR V

        Activity

          People

            vhilshei Volker Hilsheimer
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: